upd other things
Signed-off-by: Max Kovgan <max@opsguru.io>

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist = py36,py37
 [testenv]
 # install testing framework
 # ... or install anything else you might need here
+passenv =
+    PYTHONPATH
 deps =
     -r requirements_test.txt
 # run the tests
