--- a/setup.cfg
+++ b/setup.cfg
@@ -23,10 +23,10 @@ keywords =
 
 [files]
 packages =
-    company.tool
+    company_tool
 ;data_files =
-;    ultimagen/configurator/templates = etc/ultimagen/configurator/
+;    company/tool/stuff = etc/company/tool/
 
 [entry_points]
 console_scripts =
-    company_tool = company.tool.cli:main
+    company_tool = company_tool.cli:main
